# mcp-corp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
deploy/: README.md
deploy/dev/: load_test.py  postgres-seed.sql  saldo_api_stub.py
deploy/openshift/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  route.yaml  secret.example.yaml  service.yaml
deploy/swarm/: docker-compose.yml  mcp-corp-stack.yml  saldo-api-stub-stack.yml
docs/prompts/: fase-01.md  fase-02.md  fase-03.md  fase-04.md  fase-05.md  fase-06.md
src/mcp_corp/: __init__.py  __main__.py  audit.py  config.py  identifiers.py  logging_setup.py  main.py  server.py  tools.py
src/mcp_corp/connectors/: base.py  http.py  postgres.py  registry.py  resilience.py
tests/: conftest.py  test_audit.py  test_config.py  test_identifiers.py
tests/connectors/: test_degraded_startup.py  test_http.py  test_postgres_degraded_connect.py  test_postgres_integration.py  test_resilience.py
tests/tools/: test_tools_integration.py  test_tools_logic.py  test_tools_registration.py
