[project]
name = "mcp-corp"
version = "0.1.0"
description = "Implementación de referencia de un servidor MCP corporativo, stateless, sobre Streamable HTTP."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "fastmcp==3.4.4",
    "pydantic-settings==2.7.1",
    "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_corp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
